fixed masonry visibility

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -290,7 +290,7 @@ h4.white {
 
 .img-left {
   margin-left: 5% !important;
-  margin-top: -20% !important;g
+  margin-top: -20% !important;
 }
 
 .btn-outline {
